tests/cases/scc/error/0013-macro.c.res
./tests/cases/scc/error/0013-macro.c:2:21:	error:   expected a type name.
exit code 1
